--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" type="image/jpg" href="images/tree-favicon.jpg"/>
     <link rel="stylesheet" type="text/css" href="css/default.css">
     <link rel="stylesheet" type="text/css" href="css/royce.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <title>Home&mdash;Aroyce</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+
 </head>
 <body>
     <header>
@@ -25,49 +29,101 @@
     </header> 
     <main id="main">
         <section class="intro">
-            <h1>Home<span>Welcome to my portfolio!</span></h1>
+            <h1>Adrienne Royce<span>Welcome</span></h1>
             <p>
-                You'll find my resum&eacute; below and highlights of my work on the following pages. The <a href="isr.html">ISR</a> page contains my accomplishments while working at the U-M Institute for Social Research (ISR). The UMSI link will take you to my projects as a part-time student at the <a href="umsi.html">University of Michigan School of Information (UMSI)</a>. The <a href="ui-design.html">UI Design</a> page displays user interface (UI) projects from classes at Washtenaw Community College.
+                You'll find my resum&eacute; and highlights of my work on these pages. The <a href="isr.html" title="Institute for Social Research"><abbr title="Institute for Social Research">ISR</abbr></a> page contains my samples from my work as a lab manager at the U-M Institute for Social Research. The UMSI link will take you to my projects as a part-time student at the <a href="umsi.html">University of Michigan School of Information <abbr>(UMSI)</abbr></a>. The <a href="wcc.html" title="Washtenaw Community College"><abbr title="Washtenaw Community College">WCC</abbr></a> page displays user interface <abbr>(UI)</abbr> projects from classes at Washtenaw Community College.
             </p>    
         </section>
         <section class="two">
-            <h2>Adrienne Royce Resum&eacute;</h2>
-                <h3>Work Experience</h3>
+            <h2>Resum&eacute;</h2>
+            <div class="accordionWrapper"> <!--start accordion-->
+                <div class="accordionItem open"> <!--start accordion open-->
+                <h3 class="accordionItemHeading">Work Experience</h3>
+                <div class="accordionItemContent">
                     <ul>
-                        <li>ProQuest<span>User Experience Intern&mdash;June 2018 to present</span>
+                        <li class="resume-item">ProQuest<span>User Experience Intern&mdash;June 2018 to present</span>
                             <ul>
                                 <li>Ran user testing via UserTesting.com</li>
                                 <li>Revised user interface mockups with PhotoShop</li>
-                                <li>Created slide deck and assisted with presentation on email marketing</li>
+                                <li>Created slide deck and assisted with presentation on email marketing. Received "Give a Wow" company-wide recognition from Marketing manager.</li>
                             </ul></li>
-                        <li>The University of Michigan&mdash;Institute for Social Research<span>BioSocial Methods Collaborative Lab Manager&mdash;June 2016 to June 2018</span>
+                        <li class="resume-item">The University of Michigan&mdash;Institute for Social Research<span>BioSocial Methods Collaborative Lab Manager&mdash;June 2016 to June 2018</span>
                             <ul>
                                 <li>Played key role in design and communication during U-M HomeLab construction</li>
                                 <li>Estimated research project costs, tracked time sheets, and invoiced expenses</li>
                                 <li>Assisted ISR web designer with forthcoming BioSocial Methods Collaborative website</li>
                             </ul></li>
-                        <li>The Understanding Group<span>SEO Intern&mdash;May 2014 to August 2014</span>
+                        <li class="resume-item">The Understanding Group<span>SEO Intern&mdash;May 2014 to August 2014</span>
                             <ul>
                                 <li>Analyzed website and created a search engine optimization (SEO) deliverable</li>
                                 <li>Increased web traffic by 18% once recommendations were implemented</li>
                             </ul></li>
-                        <li>Pure Visibility<span>Independent Bookkeeper&mdash;August 2006 to February 2007</span>
+                        <li class="resume-item">Pure Visibility<span>Independent Bookkeeper&mdash;August 2006 to February 2007</span>
                             <ul>
                                 <li>Managed the A/R and A/P of this growing digital marketing company using Quickbooks</li>
                                 <li>Received Pure Visibility's "You Rock" award</li>
                             </ul></li>
-                        <li>Rochman Design-Build<span>Assistant Designer &amp; Office Manager&mdash;May 1996 to February 2000</span>                <ul>
+                        <li class="resume-item">Rochman Design-Build<span>Assistant Designer &amp; Office Manager&mdash;May 1996 to February 2000</span>
+                            <ul>
                                 <li>Assisted with assessing client needs and selectin materials</li>
                                 <li>Maintained job cost accounting using FileMaker Pro</li>
                                 <li>Planned and hosted open houses</li>
                                 <li>Created advertisements and fliers</li>
                             </ul></li>    
                     </ul>
-
+                </div><!--end accordion item content-->
+                </div> <!--end accordion open-->
+                <div class="accordionItem close">
+                <h3 class="accordionItemHeading">Volunteer Experience</h3>
+                <div class="accordionItemContent">
+                    <ul>
+                        <li class="resume-item">U-M Library Student Advisory Committee<span>Member&mdash;May 2017 to May 2018</span>
+                            <ul>
+                                <li>Selected to contribute feedback on library resources</li>
+                            </ul>
+                        </li> 
+                        <li class="resume-item">U-M School of Information Masters Association<span>Treasurer&mdash;May 2016 to May 2017</span>
+                            <ul>
+                                <li>Reported expenses and account balance at officer meetings</li>
+                                <li>Received a $500 U-M Central Student Government grant for year end gala</li>
+                                <li>Ended the fiscal year on target</li>
+                            </ul>
+                        </li> 
+                        <li class="resume-item">U-M School of Information Design Clinic<span>Apprentice&mdash;January 2016 to May 2016</span>
+                            <ul>
+                                <li>Assisted with the design of a Mechanical Engineering software interface</li>
+                                <li>Received 2nd Place team award in year-end competition</li>
+                            </ul>
+                        </li> 
+                        <li class="resume-item">U-M Depression Education Resource Center<span>Student Librarian&mdash;January 2016 to May 2016</span>
+                            <ul>
+                                <li>Assisted patrons with questions</li>
+                                <li>Reorganized library resources</li>
+                            </ul>
+                        </li> 
+                    </ul>
+                    <ul>
+                        <li class="resume-item">Dexter High School Robotics Team<span>Mentor&mdash;September 2014 to May 2016</span>
+                            <ul>
+                                <li>Initiated the redesign of the team website</li>
+                                <li>Mentored students on user experience concepts</li>
+                                <li>Received certification on metal mill, plasma cutter, drills, and saws</li>
+                            </ul>
+                        </li> 
+                        <li class="resume-item">Ann Arbor Christian School<span>Various&mdash;September 2005 to June 2014</span>
+                            <ul>
+                                <li>Facilitated weekly parent meetings</li>
+                                <li>Supported staff during class, fieldtrips, and lunch times</li>
+                            </ul>
+                        </li> 
+                    </ul>
+                </div><!--end volunteer experience panel-->
+            </div> <!--end accordion item close-->
+            </div> <!--end accordion wrapper-->
     </section>
     <aside>
         <img class="landmark" src="images/umsi-headshot.jpg" alt="Adrienne's headshot"> 
-        <a href="#top-section" class="sticky" aria-label="to top of page">To Top</a>
+        <button onclick="topFunction()" id="myBtn" ><a href="#top-section"  aria-label="to top of page">To Top</a></button>
     </aside>
     </main>
 
@@ -89,5 +145,6 @@
         </ul>
     </footer>
 <script src="js/main.js"></script>
+
 </body>
 </html>
