--- a/isr.html
+++ b/isr.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" type="image/jpg" href="images/tree-favicon.jpg"/>
     <link rel="stylesheet" type="text/css" href="css/default.css">
     <link rel="stylesheet" type="text/css" href="css/royce.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
@@ -80,7 +81,7 @@
         </section>
         <aside>
             <img class="landmark" src="images/isr-foam-model.jpg" alt="Adrienne with a 1 inch&#61;1 foot model of the U-M HomeLab">
-            <a href="#top-section" class="sticky" aria-label="to top of page">To Top</a>
+            <button onclick="topFunction()" id="myBtn" ><a href="#top-section"  aria-label="to top of page">To Top</a></button>
         </aside>
 
     </main>
