--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             <ul>
                                 <li>Played key role in design and communication during U-M HomeLab construction</li>
                                 <li>Estimated research project costs, tracked time sheets, and invoiced expenses</li>
-                                <li>Assisted ISR web designer with forthcoming BioSocial Methods Collaborative website</li>
+                                <li>Assisted ISR web designer with the BioSocial Methods Collaborative website redesign</li>
                             </ul></li>
                         <li class="resume-item">The Understanding Group<span>SEO Intern&mdash;May 2014 to August 2014</span>
                             <ul>
@@ -129,6 +129,14 @@
 
     <footer>
         <ul>
+            <li><h4><strong>Navigation:</strong></h4><br></li>
+            <li>Home</li>
+            <li><a href="isr.html" title="Institute for Social Research">ISR</a></li>
+            <li><a href="umsi.html" title="University of Michigan School of Information">UMSI</a></li>
+            <li><a href="wcc.html" title="Washtenaw Community College">WCC</a></li>
+        </ul>
+        <ul class="footer-right">
+            <li><h4><strong>External Links:</strong></h4><br></li>
             <li>
                 <a href="https://twitter.com/WindSweptTree" target="_blank" title="to Twitter page" aria-label="to Twitter page"><i class="fab fa-twitter-square"></i>@WindSweptTree
                 </a>
