--- a/umsi.html
+++ b/umsi.html
@@ -84,10 +84,13 @@
 
         </section>
         <section class = "five"> 
-                <h2>Alternative Spring Break&mdash;Washington, D.C.</h2>
+                <h2>Alternative Spring Break Photo Gallery</h2>
                 <p>
                     Each year the U-M School of Information arranges volunteer opportunities for Masters students during the week of Spring Break. In 2017 I joined the group traveling to Washington, DC where I and another student assisted the American Library Association with taking photos of the city for social media use.
+
+                    Click on one of the images below to see some of my photographs within a lightbox. When you are finished viewing items, either click the "x" beneath the image or press the <abbr title="escape">'Esc'</abbr> key to exit.
                 </p>
+                <br>
             <div class="gallery container">
                 <a href="images/pillar.jpg" aria-label="go to enlarged photo of " data-lightbox="washingtonDC" data-title="Washington, DC: Catholic University Library column detail"><img src="images/pillar.jpg" class="mix buildings" alt="the top of a column"></a>
                 <a href="images/lincoln-memorial.jpg" aria-label="go to enlarged photo of the Lincoln Memorial" data-lightbox="washingtonDC" data-title="Washington, DC: A closeup of the Lincoln Memorial"><img src="images/tile-lincoln-memorial.jpg" class="mix buildings" alt="The Lincoln Memorial in Washington DC"></a>
@@ -104,8 +107,16 @@
     </main>
     <footer>
         <ul>
+            <li><h4><strong>Navigation:</strong></h4><br></li>
+            <li><a href="index.html" title="Homepage">Home</a></li>
+            <li><a href="isr.html" title="Institute for Social Research">ISR</a></li>
+            <li>UMSI</li>
+            <li><a href="wcc.html" title="Washtenaw Community College">WCC</a></li>
+        </ul>
+        <ul class="footer-right">
+            <li><h4><strong>External Links:</strong></h4><br></li>
             <li>
-                <a href="https://twitter.com/WindSweptTree" target="_blank" title="to Twitter page"><i class="fab fa-twitter-square"></i>@WindSweptTree
+                <a href="https://twitter.com/WindSweptTree" target="_blank" title="to Twitter page" aria-label="to Twitter page"><i class="fab fa-twitter-square"></i>@WindSweptTree
                 </a>
             </li>
             <li>
