--- a/isr.html
+++ b/isr.html
@@ -87,8 +87,16 @@
     </main>
     <footer>
         <ul>
+            <li><h4><strong>Navigation:</strong></h4><br></li>
+            <li><a href="index.html" title="Homepage">Home</a></li>
+            <li>ISR</li>
+            <li><a href="umsi.html" title="University of Michigan School of Information">UMSI</a></li>
+            <li><a href="wcc.html" title="Washtenaw Community College">WCC</a></li>
+        </ul>
+        <ul class="footer-right">
+            <li><h4><strong>External Links:</strong></h4><br></li>
             <li>
-                <a href="https://twitter.com/WindSweptTree" target="_blank" title="to Twitter page"><i class="fab fa-twitter-square"></i>@WindSweptTree
+                <a href="https://twitter.com/WindSweptTree" target="_blank" title="to Twitter page" aria-label="to Twitter page"><i class="fab fa-twitter-square"></i>@WindSweptTree
                 </a>
             </li>
             <li>
