--- a/wcc.html
+++ b/wcc.html
@@ -35,13 +35,20 @@
             I earned an User Experience advanced certificate and a web developer certificate at Washtenaw Community College. Classes included three semesters of user experience training, two semesters of HTML and CSS, two of user interface design and a search engine optimization course. 
         </p>
     </section>
-    <section class="two gallery container">
+    <section class="two">
+        <h2>Image Gallery</h2>
+        <p>
+            Click on one of the images below to see some of my user interface designs within a lightbox. When you are finished viewing items, either click the "x" beneath the image or press the <abbr title="escape">Esc</abbr> key to exit.
+        </p>
+        <br>
+    <div class="gallery container">
 		<a href="images/panache-mboard.jpg" aria-label="go to enlarged image of Panache Bridal mood board collage" data-lightbox="portfolio-UI" data-title="UI Portfolio: Mood board for a bridal store redesign."><img src="images/tile-panache-mboard.jpg" class="mix flowers" alt="A mood board for redesigning a bridal store homepage"></a>
 		<a href="images/panache-bridals.jpg" aria-label="go to enlarged image of Panache Bridal homepage" data-lightbox="portfolio-UI" data-title="UI Portfolio: The redesigned bridal store homepage."><img src="images/tile-panache.jpg" class="mix people" alt="A redesigned bridal store homepage"></a>
 		<a href="images/affordable-tours.jpg" aria-label="go to enlarged image of Affordable Tours homepage" data-lightbox="portfolio-UI" data-title="UI Portfolio: A redesigned travel agency website"><img src="images/tile-affordable-tours.jpg" class="mix buildings" alt="The top third of a travel agency website showing the river in Prague"></a>
 		<a href="images/snowfarm.jpg" aria-label="go to enlarged image of Snowfarm homepage" data-lightbox="portfolio-UI" data-title="UI Portfolio: An art camp website redesign"><img src="images/tile-snowfarm.jpg" class="mix people" alt="A teenage girl proudly displaying a piece of clay artwork"></a>
 		<a href="images/moss-love.jpg" aria-label="go to enlarged photo of pink moss" data-lightbox="portfolio-UI" data-title="UI Portfolio: An index page redesign for a company that sells moss"><img src="images/tile-moss-love.jpg" class="mix flowers" alt="Flowering pink moss on a gray rock"></a>
-		<a href="images/market-basket.jpg" aria-label="go to enlarged photo of Market Basket hompage" data-lightbox="portfolio-UI" data-title="UI Portfolio: A three-bucket webpage redesign"><img src="images/tile-market-basket.jpg" class="mix " alt="The redesigned homepage for a grocery store"></a>
+        <a href="images/market-basket.jpg" aria-label="go to enlarged photo of Market Basket hompage" data-lightbox="portfolio-UI" data-title="UI Portfolio: A three-bucket webpage redesign"><img src="images/tile-market-basket.jpg" class="mix " alt="The redesigned homepage for a grocery store"></a>
+        </div>
     </section>
 
     <aside>
@@ -50,21 +57,29 @@
     </aside>
     </main>
     <footer>
-            <ul>
-                <li>
-                    <a href="https://twitter.com/WindSweptTree" target="_blank" title="to Twitter page"><i class="fab fa-twitter-square"></i>@WindSweptTree
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.linkedin.com/in/adrienneroyce/" target="_blank" title="to LinkedIn profile"><i class="fab fa-linkedin"></i>LinkedIn profile
-                    </a>
-                </li>
-                <li>
-                    <a href="https://github.com/aroyce" target="_blank" title="to Github profile">
-                        <i class="fab fa-github"></i>Github page
-                    </a>
-                </li>
-            </ul>
+        <ul>
+            <li><h4><strong>Navigation:</strong></h4><br></li>
+            <li><a href="index.html" title="Homepage">Home</a></li>
+            <li><a href="isr.html" title="Institute for Social Research">ISR</a></li>
+            <li><a href="umsi.html" title="University of Michigan School of Information">UMSI</a></li>
+            <li>WCC</li>
+        </ul>
+        <ul class="footer-right">
+            <li><h4><strong>External Links:</strong></h4><br></li>
+            <li>
+                <a href="https://twitter.com/WindSweptTree" target="_blank" title="to Twitter page" aria-label="to Twitter page"><i class="fab fa-twitter-square"></i>@WindSweptTree
+                </a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/in/adrienneroyce/" target="_blank" title="to LinkedIn profile"><i class="fab fa-linkedin"></i>LinkedIn profile
+                </a>
+            </li>
+            <li>
+                <a href="https://github.com/aroyce" target="_blank" title="to Github profile">
+                    <i class="fab fa-github"></i>Github page
+                </a>
+            </li>
+        </ul>
         </footer>
 
     <script src="js/main.js"></script>
