--- a/isr.html
+++ b/isr.html
@@ -25,20 +25,20 @@
     </header> 
     <main id="main">
         <section class="intro">
-            <h1>The Institute for Social Research (ISR)<br><span>Research Center for Group Dynamics, BioSocial Methods Collaborative</span></h1>
+            <h1>The Institute for Social Research<br><span>Research Center for Group Dynamics, BioSocial Methods Collaborative</span></h1>
             <p>
-                The highlights from my time as lab manager for the BioSocial Methods Collaborative at the Institute for Social Research at the University of Michigan include: playing a key role in design and communication during U-M HomeLab construction; assisting the ISR web developer with the redesign of the BioSocial Methods Collaborative website; and helping develop and conduct user product research. 
+                The highlights from my time as lab manager for the BioSocial Methods Collaborative at the Institute for Social Research (<abbr>ISR</abbr>) at the University of Michigan (<abbr title="University of Michigan">U-M</abbr>) include: playing a key role in design and communication during <abbr title="University of Michigan">U-M</abbr> HomeLab construction; assisting the <abbr title="Institute for Social Research">ISR</abbr> web developer with the redesign of the BioSocial Methods Collaborative website; and helping develop and conduct user product research. 
             </p>
         </section>
         <section class="two">
-            <h2>U-M HomeLab</h2>
+            <h2><abbr title="University of Michigan">U-M</abbr> HomeLab</h2>
             <p>
-                I took a year's worth of information and combined it into a single Google document to communicate the department's design intentions to everyone involved in the project. I then transformed the proposed U-M AEC floor plan (the kitchen stove had a direct line of sight into the bathroom) by moving the kitchen closer to the center of the lab space, adding a dedicated laundry area, and incorporating a small set of stairs. I built models; drafted floor plans and elevations; and generated posters, timelines, and brochures about the project.
+                I took a year's worth of information and combined it into a single Google document to communicate the department's design intentions to everyone involved in the project. I then transformed the proposed <abbr title="University of Michigan">U-M</abbr> <abbr title="Architecture Engineering & Construction">AEC</abbr> floor plan (the kitchen stove had a direct line of sight into the bathroom) by moving the kitchen closer to the center of the lab space, adding a dedicated laundry area, and incorporating a small set of stairs. I built models; drafted floor plans and elevations; and generated posters, timelines, and brochures about the project.
             </p>
             <div class="tile-container">
                 <figure  class="tile">
                     <img src="images/isr-kitchen.jpg" alt="the kitchen of the U-M HomeLab">
-                    <figcaption>The kitchen of the U-M HomeLab</figcaption>
+                    <figcaption>The kitchen of the <abbr title="University of Michigan">U-M</abbr> HomeLab</figcaption>
                 </figure>
                 <figure class="tile">
                     <img src="images/isr-supervision.jpg" alt="undergraduates assembling Ikea furniture">
@@ -53,7 +53,7 @@
         <section class="three">
             <h2>Website Redesign</h2>
             <p>
-                I evaluated the existing BioSocial Methods Collaborative website and worked with the department's managing director to create a subset of items for a card sorting activity. Based upon the results of running the card sort, I proposed an initial sitemap for the new design. From there we worked with the ISR Communications Manager and ISR Web Developer to come up with the user interface and navigation. The ISR developer created the WordPress page templates, I assisted with transferring content to the new layout.
+                I evaluated the existing BioSocial Methods Collaborative website and worked with the department's managing director to create a subset of items for a card sorting activity. Based upon the results of running the card sort, I proposed an initial sitemap for the new design. From there we worked with the <abbr title="Institute for Social Research">ISR</abbr> Communications Manager and <abbr title="Institute for Social Research">ISR</abbr> Web Developer to come up with the user interface and navigation. The <abbr title="Institute for Social Research">ISR</abbr> developer created the WordPress page templates, I assisted with transferring content to the new layout.
             </p>
             <div class="tile-container">
                 <figure class="tile">
@@ -72,10 +72,10 @@
         </section>
         <section class="four">
             <h2>User Product Research</h2>
-            <p>Although we worked under a non-disclosure agreement for our research efforts with Proctor &amp; Gamble, this screenshot describes what information we are able to share.</p>
+            <p>Although we worked under a non-disclosure agreement for our research efforts with Procter &amp; Gamble, this screenshot describes what information we are able to share.</p>
             <figure>
                     <img src="images/isr-user-research.jpg" alt="a listing of four research projects">
-                    <figcaption>Brief descriptions of the P&amp;G research projects</figcaption>
+                    <figcaption>Brief descriptions of the <abbr title="Procter & Gamble">P&amp;G</abbr> research projects</figcaption>
             </figure>
         
         </section>
@@ -87,14 +87,14 @@
     </main>
     <footer>
         <ul>
-            <li><h4><strong>Navigation:</strong></h4><br></li>
+            <li><strong>Navigation:</strong><br></li>
             <li><a href="index.html" title="Homepage">Home</a></li>
             <li>ISR</li>
             <li><a href="umsi.html" title="University of Michigan School of Information">UMSI</a></li>
             <li><a href="wcc.html" title="Washtenaw Community College">WCC</a></li>
         </ul>
         <ul class="footer-right">
-            <li><h4><strong>External Links:</strong></h4><br></li>
+            <li><strong>External Links:</strong><br></li>
             <li>
                 <a href="https://twitter.com/WindSweptTree" target="_blank" title="to Twitter page" aria-label="to Twitter page"><i class="fab fa-twitter-square"></i>@WindSweptTree
                 </a>
