--- a/wcc.html
+++ b/wcc.html
@@ -4,17 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <link rel="shortcut icon" type="image/jpg" href="images/tree-favicon.jpg"/>
+    <link href="images/tree-favicon.jpg" type="image/jpg" rel="shortcut icon"/>
     <link href="css/default.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/royce.css">
+    <link href="css/royce.css" type="text/css" rel="stylesheet" >
 	<link href="css/lightbox.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <title>WCC&mdash;Aroyce</title>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
 	<header>
@@ -58,14 +55,14 @@
     </main>
     <footer>
         <ul>
-            <li><h4><strong>Navigation:</strong></h4><br></li>
+            <li><strong>Navigation:</strong><br></li>
             <li><a href="index.html" title="Homepage">Home</a></li>
             <li><a href="isr.html" title="Institute for Social Research">ISR</a></li>
             <li><a href="umsi.html" title="University of Michigan School of Information">UMSI</a></li>
             <li>WCC</li>
         </ul>
         <ul class="footer-right">
-            <li><h4><strong>External Links:</strong></h4><br></li>
+            <li><strong>External Links:</strong><br></li>
             <li>
                 <a href="https://twitter.com/WindSweptTree" target="_blank" title="to Twitter page" aria-label="to Twitter page"><i class="fab fa-twitter-square"></i>@WindSweptTree
                 </a>
