--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <section class="intro">
             <h1>Adrienne Royce<span>Welcome</span></h1>
             <p>
-                You'll find my resum&eacute; and highlights of my work on these pages. The <a href="isr.html" title="Institute for Social Research"><abbr title="Institute for Social Research">ISR</abbr></a> page contains my samples from my work as a lab manager at the <abbr title="University of Michigan">U-M</abbr> Institute for Social Research. The <abbr>UMSI</abbr> link will take you to my projects as a part-time student at the <a href="umsi.html">University of Michigan School of Information (<abbr>UMSI</abbr>)</a>. The <a href="wcc.html" title="Washtenaw Community College"><abbr title="Washtenaw Community College">WCC</abbr></a> page displays user interface (<abbr>UI</abbr>) projects from classes at Washtenaw Community College.
+                You'll find my resum&eacute; and work highlights on these pages. The <a href="isr.html" title="Institute for Social Research">ISR</a> page contains my samples from my work as a lab manager at the University of Michigan (U-M) Institute for Social Research. The UMSI link will take you to my projects as a student at the <a href="umsi.html">University of Michigan School of Information (UMSI)</a>. The <a href="wcc.html" title="Washtenaw Community College">WCC</a> page displays user interface (UI) projects from classes at Washtenaw Community College.
             </p>    
         </section>
         <section class="two">
@@ -43,9 +43,10 @@
                     <ul>
                         <li class="resume-item">ProQuest<span>User Experience Intern&mdash;June 2018 to present</span>
                             <ul>
-                                <li>Ran user testing via UserTesting.com</li>
-                                <li>Revised user interface mockups with PhotoShop</li>
-                                <li>Created slide deck and assisted with presentation on email marketing. Received "Give a Wow" company-wide recognition from Marketing manager.</li>
+                                <li>Implemented Photoshop and InVision for Ebooks design revisions</li>
+                                <li>Wrote JIRA stories and created interfaces for single sign-on process</li>
+                                <li>Generated and analyzed remote user testing for Bowker MyIdentifier and proposed new information architecture for website</li>
+                                <li>Drafted UX presentation to marketing group and assisted with workshop. Received "Give a Wow-Values Our People" recognition from Marketing manager</li>
                             </ul></li>
                         <li class="resume-item">The University of Michigan&mdash;Institute for Social Research<span>BioSocial Methods Collaborative Lab Manager&mdash;June 2016 to June 2018</span>
                             <ul>
