--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                     <ul>
                         <li class="resume-item">ProQuest<span>User Experience Intern&mdash;June 2018 to present</span>
                             <ul>
-                                <li>Implemented Photoshop and InVision for Ebooks design revisions</li>
-                                <li>Wrote JIRA stories and created interfaces for single sign-on process</li>
+                                <li>Implemented Photoshop and InVision for Ebooks interface revisions</li>
+                                <li>Wrote JIRA stories and created mock-ups for single sign-on process</li>
                                 <li>Generated and analyzed remote user testing for Bowker MyIdentifier and proposed new information architecture for website</li>
                                 <li>Drafted UX presentation to marketing group and assisted with workshop. Received "Give a Wow-Values Our People" recognition from Marketing manager</li>
                             </ul></li>
