--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <section class="intro">
             <h1>Adrienne Royce<span>Welcome</span></h1>
             <p>
-                You'll find my resum&eacute; and work highlights on these pages. The <a href="isr.html" title="Institute for Social Research">ISR</a> page contains my samples from my work as a lab manager at the University of Michigan (U-M) Institute for Social Research. The UMSI link will take you to my projects as a student at the <a href="umsi.html">University of Michigan School of Information (UMSI)</a>. The <a href="wcc.html" title="Washtenaw Community College">WCC</a> page displays user interface (UI) projects from classes at Washtenaw Community College.
+                You'll find my resum&eacute; and career highlights on this website. <a href="isr.html" title="Institute for Social Research">ISR</a> contains samples from work as a lab manager at the University of Michigan (U-M) Institute for Social Research. <a href="umsi.html">UMSI</a> will take you to my projects as a student at the University of Michigan School of Information. <a href="wcc.html" title="Washtenaw Community College">WCC</a> displays user interface projects from classes at Washtenaw Community College.
             </p>    
         </section>
         <section class="two">
@@ -48,25 +48,25 @@
                                 <li>Generated and analyzed remote user testing for Bowker MyIdentifier and proposed new information architecture for website</li>
                                 <li>Drafted UX presentation to marketing group and assisted with workshop. Received "Give a Wow-Values Our People" recognition from Marketing manager</li>
                             </ul></li>
-                        <li class="resume-item">The University of Michigan&mdash;Institute for Social Research<span>BioSocial Methods Collaborative Lab Manager&mdash;June 2016 to June 2018</span>
+                        <li class="resume-item">The University of Michigan Institute for Social Research<span>BioSocial Methods Collaborative Lab Manager&mdash;June 2016 to June 2018</span>
                             <ul>
-                                <li>Played key role in design and communication during <abbr title="University of Michigan">U-M</abbr> HomeLab construction</li>
+                                <li>Played a key role in the design and communication for the U-M HomeLab research facility</li>
                                 <li>Estimated research project costs, tracked time sheets, and invoiced expenses</li>
-                                <li>Assisted <abbr title="Institute for Social Research">ISR</abbr> web designer with the BioSocial Methods Collaborative website redesign</li>
+                                <li>Assisted ISR web designer with the BioSocial Methods Collaborative website redesign</li>
                             </ul></li>
-                        <li class="resume-item">The Understanding Group<span><abbr title="Search engine optimization">SEO</abbr> Intern&mdash;May 2014 to August 2014</span>
+                        <li class="resume-item">The Understanding Group<span>SEO Intern&mdash;May 2014 to August 2014</span>
                             <ul>
                                 <li>Analyzed website and created a search engine optimization (<abbr>SEO</abbr>) deliverable</li>
                                 <li>Increased web traffic by 18% once recommendations were implemented</li>
                             </ul></li>
                         <li class="resume-item">Pure Visibility<span>Independent Bookkeeper&mdash;August 2006 to February 2007</span>
                             <ul>
-                                <li>Managed the <abbr title="accounts receivable">A/R</abbr> and <abbr title="accounts payable">A/P</abbr> of this growing digital marketing company using Quickbooks</li>
+                                <li>Managed the A/R and A/P of this growing digital marketing company using Quickbooks</li>
                                 <li>Received Pure Visibility's "You Rock" award</li>
                             </ul></li>
                         <li class="resume-item">Rochman Design-Build<span>Assistant Designer &amp; Office Manager&mdash;May 1996 to February 2000</span>
                             <ul>
-                                <li>Assisted with assessing client needs and selectin materials</li>
+                                <li>Assisted with assessing client needs and selection of materials</li>
                                 <li>Maintained job cost accounting using FileMaker Pro</li>
                                 <li>Planned and hosted open houses</li>
                                 <li>Created advertisements and fliers</li>
@@ -78,25 +78,25 @@
                 <h3 class="accordionItemHeading">Volunteer Experience</h3>
                 <div class="accordionItemContent">
                     <ul>
-                        <li class="resume-item"><abbr title="University of Michigan">U-M</abbr> Library Student Advisory Committee<span>Member&mdash;May 2017 to May 2018</span>
+                        <li class="resume-item">U-M Library Student Advisory Committee<span>Member&mdash;May 2017 to May 2018</span>
                             <ul>
                                 <li>Selected to contribute feedback on library resources</li>
                             </ul>
                         </li> 
-                        <li class="resume-item"><abbr title="University of Michigan">U-M</abbr> School of Information Masters Association<span>Treasurer&mdash;May 2016 to May 2017</span>
+                        <li class="resume-item">U-M School of Information Masters Association<span>Treasurer&mdash;May 2016 to May 2017</span>
                             <ul>
                                 <li>Reported expenses and account balance at officer meetings</li>
                                 <li>Received a $500 <abbr title="University of Michigan">U-M</abbr> Central Student Government grant for year end gala</li>
                                 <li>Ended the fiscal year on target</li>
                             </ul>
                         </li> 
-                        <li class="resume-item"><abbr title="University of Michigan">U-M</abbr> School of Information Design Clinic<span>Apprentice&mdash;January 2016 to May 2016</span>
+                        <li class="resume-item">U-M School of Information Design Clinic<span>Apprentice&mdash;January 2016 to May 2016</span>
                             <ul>
                                 <li>Assisted with the design of a Mechanical Engineering software interface</li>
                                 <li>Received 2nd Place team award in year-end competition</li>
                             </ul>
                         </li> 
-                        <li class="resume-item"><abbr title="University of Michigan">U-M</abbr> Depression Education Resource Center<span>Student Librarian&mdash;January 2016 to May 2016</span>
+                        <li class="resume-item">U-M Depression Education Resource Center<span>Student Librarian&mdash;January 2016 to May 2016</span>
                             <ul>
                                 <li>Assisted patrons with questions</li>
                                 <li>Reorganized library resources</li>
@@ -114,7 +114,8 @@
                         <li class="resume-item">Ann Arbor Christian School<span>Various&mdash;September 2005 to June 2014</span>
                             <ul>
                                 <li>Facilitated weekly parent meetings</li>
-                                <li>Supported staff during class, fieldtrips, and lunch times</li>
+                                <li>Supported staff during classes, fieldtrips, and lunches</li>
+                                <li>Volunteered in school library</li>
                             </ul>
                         </li> 
                     </ul>
